# alloy

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs  deny.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
alloy/: Cargo.toml
alloy/src/: clipboard_handler.rs  cmd_line.rs  configuration.rs  handle_panic.rs  main.rs  playback_manager.rs  utils.rs
alloy/src/image_cache/: directory.rs  image_loader.rs  mod.rs  pending_requests.rs
alloy/src/widgets/: bottom_bar.rs  copy_notification.rs  help_screen.rs  picture_widget.rs
distribution/macos/: create_dmg.sh
distribution/windows/: alloy.nsi  make-test-installer.bat  update_files.bat
examples/: hello.rs
gelatin/: Cargo.toml
gelatin/examples/: hello.rs
gelatin/src/: application.rs  button.rs  label.rs  misc.rs  window.rs
resource_dev/Usage Panel/: Alloy Usage.odt  HOW TO EDIT.txt
src/: clipboard_handler.rs  cmd_line.rs  configuration.rs  handle_panic.rs  input_handling.rs  main.rs  parallel_action.rs  playback_manager.rs  utils.rs  version.rs
src/gelatin/: application.rs  button.rs  label.rs  line_layout_container.rs  misc.rs  mod.rs  picture.rs  slider.rs  window.rs
src/image_cache/: directory.rs  image_loader.rs  mod.rs  pending_requests.rs
src/widgets/: bottom_bar.rs  copy_notification.rs  help_screen.rs  picture_widget.rs
subcrates/gelatin/: Cargo.toml
subcrates/gelatin/examples/: hello.rs
subcrates/gelatin/src/: application.rs  lib.rs  line_layout_container.rs  misc.rs  picture.rs  shaders.rs  slider.rs  window.rs
