[package]
name = "alloy"
version = "1.0.0"
description = "A fast and minimalistic image viewer based on emulsion"
repository = "https://github.com/ardaku/alloy"
license = "MIT"
readme = "README.md"
edition = "2021"
build = "build.rs"

[package.metadata.bundle]
name = "Emulsion"
identifier = "org.ardaku.alloy"
icon = ["resource_dev/emulsion.png"]
resources = ["LICENSE.txt"]
short_description = "A lightweight and minimalistic image viewer based on emulsion"
copyright = "Copyright (c) 2020 The Emulsion Contributors, Copyright (c) 2022 The Alloy Contributors"
linux_exec_args = "%f"
linux_mime_types = [
    "image/jpeg",
	"image/jpg",
	"image/pjpeg",
	"image/png",
	"image/apng",
	"image/gif",
	"image/webp",
	"image/tiff",
	"image/bmp",
	"image/avif",
	"image/svg+xml",
	"image/svg",
	"image/x-png",
	"image/x-tga",
	"image/x-targa",
	"image/x-bmp",
	"image/x-icon",
	"image/vnd.microsoft.icon",
	"image/vnd.radiance",
	"image/x‑portable‑bitmap",
	"image/x‑portable‑graymap",
	"image/x‑portable‑pixmap",
	"image/x‑portable‑anymap"
]

[workspace]
members = [
    "subcrates/gelatin",
]

[profile.dev.package."*"]
opt-level = 1
[profile.dev.build-override]
opt-level = 1
[profile.release]
lto = "thin"

[features]
default = []
networking = ["ureq"]
avif = ["libavif-image"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[dependencies]
gelatin = { path = "./subcrates/gelatin", version = "0.7" }
ureq = { version = "2.3.1", features = ["json"], optional = true }
lazy_static = "1.4.0"
directories-next = "2.0.0"
open = "1.5.0"
sys-info = "0.9.1"
error-chain = "0.12.4"
backtrace = "0.3.56"
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.8"
rand = "0.8.5"
lexical-sort = "0.3.1"
trash = "2.0.1"
clap = { version = "2.33.3", default-features = false }
kamadak-exif = "0.5.3"
arboard = { version = "2.1.1", features = ["wayland-data-control"] }
resvg = "0.14.1"
usvg = "0.14.1"
tiny-skia = "0.5.1"
log = "0.4"
env_logger = "0.8"

[dependencies.libavif-image]
version = "0.6.0"
default-features = false
features = ["codec-dav1d"]
optional = true
