[package]
name = "alloy"
version = "1.0.0"
description = "A fast and minimalistic image viewer based on emulsion"
repository = "https://github.com/ardaku/alloy"
license = "MIT"
readme = "README.md"
edition = "2021"
build = "build.rs"

[package.metadata.bundle]
name = "Alloy"
identifier = "org.ardaku.alloy"
icon = ["resource_dev/alloy.png"]
resources = ["LICENSE.txt"]
short_description = "A lightweight and minimalistic image viewer based on emulsion"
copyright = "Copyright (c) 2020 The Emulsion Contributors, Copyright (c) 2022-2024 The Alloy Contributors"
linux_exec_args = "%f"
linux_mime_types = [
    "image/jpeg",
    "image/jpg",
    "image/pjpeg",
    "image/png",
    "image/apng",
    "image/gif",
    "image/webp",
    "image/tiff",
    "image/bmp",
    "image/avif",
    "image/svg+xml",
    "image/svg",
    "image/x-png",
    "image/x-tga",
    "image/x-targa",
    "image/x-bmp",
    "image/x-icon",
    "image/vnd.microsoft.icon",
    "image/vnd.radiance",
    "image/x‑portable‑bitmap",
    "image/x‑portable‑graymap",
    "image/x‑portable‑pixmap",
    "image/x‑portable‑anymap"
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
arboard = "3.2"
backtrace = "0.3"
cgmath = "0.18"
directories = "5.0"
env_logger = "0.11"
glium = "0.32"
image = "0.24"
kamadak-exif = "0.5"
lazy_static = "1.4"
lexical-sort = "0.3"
log = "0.4"
open = "5.1"
pico-args = "0.5"
rand = "0.8"
resvg = "0.40"
serde = { version = "1.0.159", features = ["derive"] }
sys-info = "0.9"
thiserror = "1.0"
tiny-skia = "0.11"
toml = "0.8"
trash = { version = "3.0", default-features = false }
typed-builder = "0.18"
usvg = "0.40"
winit = "0.28"
