[package]
name = "alloy"
version = "1.0.0"
description = "A fast and minimalistic image viewer based on emulsion"
repository = "https://github.com/ardaku/alloy"
license = "MIT"
readme = "README.md"
edition = "2021"
build = "build.rs"

[package.metadata.bundle]
name = "Emulsion"
identifier = "org.ardaku.alloy"
icon = ["resource_dev/emulsion.png"]
resources = ["LICENSE.txt"]
short_description = "A lightweight and minimalistic image viewer based on emulsion"
copyright = "Copyright (c) 2020 The Emulsion Contributors, Copyright (c) 2022 The Alloy Contributors"
linux_exec_args = "%f"
linux_mime_types = [
    "image/jpeg",
	"image/jpg",
	"image/pjpeg",
	"image/png",
	"image/apng",
	"image/gif",
	"image/webp",
	"image/tiff",
	"image/bmp",
	"image/avif",
	"image/svg+xml",
	"image/svg",
	"image/x-png",
	"image/x-tga",
	"image/x-targa",
	"image/x-bmp",
	"image/x-icon",
	"image/vnd.microsoft.icon",
	"image/vnd.radiance",
	"image/x‑portable‑bitmap",
	"image/x‑portable‑graymap",
	"image/x‑portable‑pixmap",
	"image/x‑portable‑anymap"
]

[features]
default = []
networking = ["ureq"]
avif = ["libavif-image"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
gelatin = { path = "../gelatin" }
ureq = { version = "2.5", features = ["json"], optional = true }
lazy_static = "1.4"
directories-next = "2.0"
open = "3.0"
sys-info = "0.9"
error-chain = "0.12"
backtrace = "0.3"
serde = { version = "1.0.139", features = ["derive"] }
toml = "0.5"
rand = "0.8"
lexical-sort = "0.3"
trash = "2.1"
clap = { version = "3.2", default-features = false, features = ["std"] }
kamadak-exif = "0.5"
arboard = "2.1"
resvg = "0.23"
usvg = "0.23"
tiny-skia = "0.6"
log = "0.4"
env_logger = "0.9"

[dependencies.libavif-image]
version = "0.9"
default-features = false
features = ["codec-dav1d"]
optional = true
